--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-# **_Welcome_**
----
-## **_to_**
----
-# **_FANTASY PHYSICS_**
+<!DOCTYPE html> 
+<html>
+<body> 
+
+<h1 style="text-align:center;"> Welcome </h1>
+  <h2 style="text-align:center;"> to </h2>
+  <h1 style="text-align:center;"> FANTASY PHYSICS </h1>
+<p> My First Paragraph. </p> 
+
+</body> 
+</html> 
