--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <body> 
 
-<h1 style="text-align:center;"> Welcome </h1>
+  <h1 style="text-align:center;"><i> Welcome </i></h1>
   <h2 style="text-align:center;"> to </h2>
-  <h1 style="text-align:center;"> FANTASY PHYSICS </h1>
+  <h1 style="text-align:center;"><i> FANTASY PHYSICS <i></h1>
+    
 <p> My First Paragraph. </p> 
 
 </body> 
