--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <h1 style="text-align:center;"><i> Welcome </i></h1>
   <h2 style="text-align:center;"> to </h2>
   <h1 style="text-align:center;"><i> FANTASY PHYSICS <i></h1>
-    <h3 style="text-align:center;"><i> Get ready to unlock your potential </i></h3> 
+    <h3 style="text-align:center;"><i> Get ready to unlock the potential </i></h3> 
     
 <p> My First Paragraph. </p> 
 
