--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html>
-<body> 
+<body style="background: url(https://www.google.com/search?q=universe&rlz=1C1CHBF_enUS746US746&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjd2sfU05LcAhVRnKwKHb_QDdYQ_AUICigB&biw=1280&bih=587#imgrc=P8svCBWWBcQBkM:)"> 
 
   <h1 style="text-align:center;"><i> Welcome </i></h1>
   <h2 style="text-align:center;"> to </h2>
