--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html>
-<body style="background: url(https://www.google.com/imgres?imgurl=https://img.elo7.com.br/product/zoom/162E638/tecido-estampado-universo-galaxia-vestido-universo.jpg)">
+<body background="https://www.google.com/imgres?imgurl=https://img.elo7.com.br/product/zoom/162E638/tecido-estampado-universo-galaxia-vestido-universo.jpg">
 
   <h1 style="text-align:center;"><i> Welcome </i></h1>
   <h2 style="text-align:center;"> to </h2>
