--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html>
-<body background="universe.jpg">
+<body style="background-image:"universe.jpg">
   <h1 style="text-align:center;"><i> Welcome </i></h1>
   <h2 style="text-align:center;"> to </h2>
   <h1 style="text-align:center;"><i> FANTASY PHYSICS <i></h1>
