--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1 style="text-align:center;"><i> FANTASY PHYSICS <i></h1>
     <h3 style="text-align:center;"><i> Get ready to unlock the potential </i></h3> 
     
-<p> My First Paragraph. </p> 
+<p> My First Paragraphs. </p> 
 
 </body> 
 </html> 
