--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <style>
-    body{background-image: url("https://img.elo7.com.br/product/zoom/162E638/tecido-estampado-universo-galaxia-vestido-universo.jpg"}
+    body{background-image: url("https://img.elo7.com.br/product/zoom/162E638/tecido-estampado-universo-galaxia-vestido-universo.jpg")}
   </style>
 <body style="background-image:universe.jpg">
   <h1 style="text-align:center;"><i> Welcome </i></h1>
