--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html> 
 <html>
 <body style="background-image:url(https://img.elo7.com.br/product/zoom/162E638/tecido-estampado-universo-galaxia-vestido-universo.jpg)">
-  <h1 style="text-align:center;" style="color:white"><i> Welcome </i></h1>
+  <h1 style="text-align:center;" "color:white"><i> Welcome </i></h1>
   <h2 style="text-align:center;"> to </h2>
   <h1 style="text-align:center;"><i> FANTASY PHYSICS <i></h1>
     <h3 style="text-align:center;"><i> Get ready to unlock the potential </i></h3> 
     
-<p> My First Paragraphs. </p> 
+<p> My First Paragraphs.
+    fklafdsa</p> 
 
 </body> 
 </html> 
