--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html> 
 <html>
 <body style="background-image:url(https://img.elo7.com.br/product/zoom/162E638/tecido-estampado-universo-galaxia-vestido-universo.jpg)">
-  <h1 style="text-align:center;color:white"><font face="serif"><i> Welcome </i></h1>
+  <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
   <h2 style="text-align:center;color:white"> to </h2>
   <h1 style="text-align:center;color:white"><i> FANTASY PHYSICS <i></h1>
     <h3 style="text-align:center;color:white"><i> Get ready to unlock the potential </i></h3> 
     
-<p> My First Paragraphs.
+<p> My First Paragraphs. jfdla;fe
   </p> 
 
 </body> 
