--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
   <h2 style="text-align:center;color:white"> to </h2>
   <h1 style="text-align:center;color:white"><i> FANTASY PHYSICS <i></h1>
-    <h3 style="text-align:center;color:white"><i> Get ready to unlock the potential </i></h3> 
+    <h3 style="text-align:center;color:white"><i> Unlock the potential </i></h3> 
     
 <p> My First Paragraphs. jfdla;fe
   </p> 
