--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html> 
-<html lang="en">
-  <head> 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-  </head>
+<html>
 <body style="background-image:url(https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d8c03c98f431a4dbbfb5f93962fa44e7&w=1000&q=80)">
   <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
   <h2 style="text-align:center;color:white"> to </h2>
   <h1 style="text-align:center;color:white"><i> FANTASY PHYSICS <i></h1>
     <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3> 
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    
+      
 <p> My First Paragraphs. jfdla;jfke
   </p> 
 
