--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">About <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">What is Fantasy Physics?</a></li>
+          <li><a href="#">How to Play</a></li>
+        </ul>
+      </li>
       <li><a href="#">Team Rosters</a></li>
       <li><a href="#">Scoring Rubric</a></li>
     </ul>
