--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>   
+      </button>
       <a class="navbar-brand" href="#">Fantasy Physics</a>
     </div>
     <ul class="nav navbar-nav">
