--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
       <li><a href="#">Team Rosters</a></li>
       <li><a href="#">Scoring Rubric</a></li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+       <ul class="nav navbar-nav navbar-right">
+          <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
     </div>
 </nav>
 
