--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
       <li><a href="#">Team Rosters</a></li>
       <li><a href="#">Scoring Rubric</a></li>
     </ul>
-       <ul class="nav navbar-nav navbar-right">
-          <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+      <ul class="nav navbar-nav navbar-right">
        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
-    </div>
+      <form class="navbar-form navbar-right" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search...">
+        </div> 
+       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
+    </form>
+       </div>
 </nav>
 
   <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
