--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a class="navbar-brand" href="#">Fantasy Physics</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="index.html">Home</a></li>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">About <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">What is Fantasy Physics?</a></li>
