--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="#">How to Play</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Rules</a></li>
       <li><a href="#">Team Rosters</a></li>
       <li><a href="#">Scoring Rubric</a></li>
     </ul>
