--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Rules</a></li>
-      <li><a href="#">Team Rosters</a></li>
-      <li><a href="#">Scoring Rubric</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="rules.html">Rules</a></li>
+      <li><a href="rosters.html">Team Rosters</a></li>
+      <li><a href="scoring.html">Scoring Rubric</a></li>
     </ul>
       <ul class="nav navbar-nav navbar-right">
        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
