--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
+      <li><a href="rules.html">Rules</a></li>
+      <li><a href="rosters.html">Team Rosters</a></li>
+      <li><a href="scoring.html">Scoring Rubric</a></li>
       </ul>
     </nav>
     
