--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 </nav>
 
   <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
-  <h2 style="text-align:center;color:white"> to </h2>
-  <h1 style="text-align:center;color:white"><i> FANTASY PHYSICS <i></h1>
+  <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2>
+  <h1 style="text-align:center;color:white"><font face="sans-serif"><i> FANTASY PHYSICS <i></h1>
     <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3> 
     
 <p> My First Paragraphs. 
