--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -12,8 +12,8 @@
       <li class="active"><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="rules.html">Rules</a></li>
-      <li><a href="rosters.html">Team Rosters</a></li>
-      <li><a href="scoring.html">Scoring Rubric</a></li>
+      <li><a href="teamrosters.html">Team Rosters</a></li>
+      <li><a href="scoringrubric.html">Scoring Rubric</a></li>
     </ul>
     </nav>
     
