--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="about.html">About</a></li>
       <li><a href="rules.html">Rules</a></li>
       <li><a href="rosters.html">Team Rosters</a></li>
-      <li><a href="scoring.html">Scoring Rubric</a></li>
+      <li><a href="scoringrubric.html">Scoring Rubric</a></li>
     </ul>
       <ul class="nav navbar-nav navbar-right">
        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
