--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li class="active"><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="rules.html">Rules</a></li>
-      <li><a href="rosters.html">Team Rosters</a></li>
+      <li><a href="teamrosters.html">Team Rosters</a></li>
       <li><a href="scoringrubric.html">Scoring Rubric</a></li>
     </ul>
       <ul class="nav navbar-nav navbar-right">
