--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </button>
       <a class="navbar-brand" href="#">Fantasy Physics</a>
     </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
