--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -42,7 +42,7 @@
      </nav>
        
        
-       <table class="table table-dark">
+       <table class="table .table-dark">
   <thead>
     <tr>
       <th scope="col">#</th>
