--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -41,8 +41,7 @@
        </div>
      </nav>
        
-       
-       <table class="table .table-dark">
+       <table class="table table-bordered table-dark">
   <thead>
     <tr>
       <th scope="col">#</th>
