--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -41,7 +41,7 @@
        </div>
      </nav>
        
-       <table class="table table-bordered table-dark">
+       <table class="table table-bordered "style="background-color: black">
   <thead>
     <tr>
       <th scope="col">#</th>
