--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -41,7 +41,7 @@
        </div>
      </nav>
        
-       <table class="table table-bordered "style="background-color:black;text-color:white">
+       <table class="table table-bordered"style="background-color:lightblack;color:white">
   <thead>
     <tr>
       <th scope="col">#</th>
