--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -41,7 +41,7 @@
        </div>
      </nav>
        
-       <table class="table table-bordered"style="background-color:black;color:white">
+       <table class="table table-bordered"style="background-color:rgf(120, 120, 127);color:white">
   <thead>
     <tr>
       <th scope="col">#</th>
