--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -41,7 +41,7 @@
        </div>
      </nav>
        
-       <table class="table table-bordered"style="color:white">
+       <table class="table table-bordered"style="background-color:rgb(60, 60, 60);color:white">
   <thead>
     <tr>
       <th scope="col">#</th>
