--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -41,7 +41,8 @@
        </div>
      </nav>
        
-       <table class="table table-bordered"style="background-color:rgb(39, 62, 125);color:white">
+       <h2 style="text-align:left;color:white">Dark Matter</h2>
+       <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
   <thead>
     <tr>
       <th scope="col">#</th>
