--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -41,7 +41,7 @@
        </div>
      </nav>
        
-       <h2 style="text-align:left;color:white">Dark Matter</h2>
+       <h2 style="text-align:left;color:white">Dark Matter</h2> <h3 style="color:white"> - WIMP & Dark/Hidden Sectors</h3>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
   <thead>
     <tr>
