--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -41,19 +41,25 @@
        </div>
      </nav>
        
-       <h2 style="text-align:left;color:white">Dark Matter</h2> <h3 style="color:white"> - WIMP & Dark/Hidden Sectors</h3>
+       <h2 style="text-align:left;color:white">Dark Matter</h2> 
+       <h4 style="color:white">WIMP & Dark/Hidden Sectors</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Experiment</th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th scope="row">1</th>
+      <th scope="row"></th>
+      <td></td>
+      <td></td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
