--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -56,10 +56,7 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row"></th>
-      <td></td>
-      <td></td>
-      <td></td>
+      <th scope="row">1</th>
       <td></td>
       <td></td>
       <td></td>
