--- a/rules.html
+++ b/rules.html
@@ -45,7 +45,7 @@
      
      <h2 style="color:white">General Rules & Definitions</h2>
    	<h3 style="color:white">Definitions</h3>
-  User - Humans who physically play the game
+ <p> User - Humans who physically play the game
 EP - Event Points
 GP - Game Points
 Tournament - A general category of physics that contains many groups of more specific topics
@@ -120,7 +120,7 @@ Not Okay - User A’s Index: XXXX | User B’s Index: XXXX | User C’s Index: X
 How is an Event won?
 An Event is won by a User whose cumulative EP is the highest
  Ties
-A tie within an event is settled by evenly distributing 100GP to each winner
+   A tie within an event is settled by evenly distributing 100GP to each winner</p>
  
     
     </body>
