--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -56,21 +56,30 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row">1</th>
+      <th scope="row">PICO</th>
       <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">SuperCDMS</th>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
       <td></td>
       <td></td>
     </tr>
     <tr>
-      <th scope="row">2</th>
+      <th scope="row">CRESST</th>
       <td></td>
       <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td></td>
-      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
       <td></td>
     </tr>
   </tbody>
