--- a/rules.html
+++ b/rules.html
@@ -43,7 +43,7 @@
 </nav>
     </nav>
      
-     <h2 style="color:white">General Rules & Definitions</h2>
+     <h2 style="color:white">General Rules & Definitions<br></h2>
    	<h3 style="color:white">Definitions</h3>
  
     
