--- a/rules.html
+++ b/rules.html
@@ -43,8 +43,8 @@
 </nav>
     </nav>
      
-     <h2 style="color:white">General Rules & Definitions<br></h2>
-   	<h3 style="color:white">Definitions</h3>
+     <h2 style="color:white">General Rules & Definitions<br><br></h2>
+   	<h4 style="color:white">Definitions</h4>
  
     
     </body>
