--- a/rules.html
+++ b/rules.html
@@ -44,7 +44,10 @@
     </nav>
      
      <h2 style="color:white">General Rules & Definitions<br><br></h2>
-   	<h4 style="color:white">Definitions</h4>
+   	<h3 style="color:white">Definitions</h3>
+     <ul>
+       <li style="margin-left:40px"><b><i>User-</b></i>Humans who physically play the game</li>
+       </ul>
  
     
     </body>
