--- a/rules.html
+++ b/rules.html
@@ -46,7 +46,7 @@
      <h2 style="color:white">General Rules & Definitions<br><br></h2>
    	<h3 style="color:white">Definitions</h3>
      <ul>
-       <li style="margin-left:40px"><b><i>User-</b></i>Humans who physically play the game</li>
+       <li style="margin-left:40px;color:white"><b><i>User-</b></i>Humans who physically play the game</li>
        </ul>
  
     
