--- a/rules.html
+++ b/rules.html
@@ -44,7 +44,7 @@
     </nav>
      
      <h2 style="color:white">General Rules & Definitions<br><br></h2>
-   	<h3 style="color:white">Definitions</h3>
+   	<h3 style="font-size:35px;color:white">Definitions</h3>
      <ul>
        <li style="margin-left:40px;color:white;font-size:25px"><b><i>User-</b></i>Humans who physically play the game</li>
        </ul>
