--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -82,6 +82,87 @@
          <td></td>
       <td></td>
     </tr>
+    <tr>
+      <th scope="row">SIMPLE</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Pacific NW National Lab - WIMP Search</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">LX</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">DAMPE</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">XMASS</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">DarkSide-20k</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">CERN SPS/NA64</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">SLAC/HPS</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">DAMA</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
   </tbody>
 </table>
     
