--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -46,7 +46,7 @@
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
   <thead>
     <tr>
-      <th scope="col">Experiment</th>
+      <th scope="col" width="130">Experiment</th>
       <th scope="col"></th>
       <th scope="col"></th>
       <th scope="col"></th>
