--- a/rules.html
+++ b/rules.html
@@ -47,6 +47,8 @@
    	<h3 style="font-size:30px;color:white">Definitions</h3>
      <ul>
        <li style="margin-left:25px;color:white;font-size:22px"><b><i>User - </b></i>Humans who physically play the game</li>
+       <li style="margin-left:25px;color:white;font-size:22px"><b><i>EP - </b></i>Event Points</li>
+       <li style="margin-left:25px;color:white;font-size:22px"><b><i>GP - </b></i>Game Points</li>
        </ul>
  
     
