--- a/rules.html
+++ b/rules.html
@@ -49,6 +49,10 @@
        <li style="margin-left:25px;color:white;font-size:22px"><b><i>User - </b></i>Humans who physically play the game</li>
        <li style="margin-left:25px;color:white;font-size:22px"><b><i>EP - </b></i>Event Points</li>
        <li style="margin-left:25px;color:white;font-size:22px"><b><i>GP - </b></i>Game Points</li>
+       <li style="margin-left:25px;color:white;font-size:22px"><b><i>Tournament - </b></i>A general category of physics that contains many groups of more specific topics</li>
+       <li style="margin-left:25px;color:white;font-size:22px"><b><i>Tournament Champion - </b></i>The highest degree of “winning” that a User can achieve</li>
+       <li style="margin-left:25px;color:white;font-size:22px"><b><i>Event - </b></i>A subcategory within a Tournament wherein specific experiments relating to the subcategory are chosen as “Teams”</li>
+       <li style="margin-left:50px;color:white;font-size:22px">This is where all the points for the game are earned</li>
        </ul>
  
     
