--- a/rules.html
+++ b/rules.html
@@ -43,7 +43,7 @@
 </nav>
     </nav>
      
-     <h2 style="color:white">General Rules & Definitions<br><br></h2>
+     <h1 style="color:white">Rules & Definitions<br><br></h1>
    	<h3 style="font-size:30px;color:white">Definitions</h3>
      <ul>
        <li style="margin-left:25px;color:white;font-size:22px"><b><i>User - </b></i>Humans who physically play the game</li>
