--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -335,6 +335,113 @@
     </tr>
    </tbody>
 </table>
+       
+          <h4 style="color:white">NOvA</h4>
+        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
+  <thead>
+    <tr>
+      <th scope="col" width="130">Experiment</th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Recent Results of Electron-Neutrino Appearance Measurement at NOvA (13' + 2')</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Neutrino Induced Neutral Current Coherent π^0 Production in The NOvA Near Detector</th>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Looking amongst the neutrinos for lightweight dark matter in the NOva Near Dectector </th>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Measurement of c-jet tagging efficiency in ATLAS with W+c-jet events</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Extrapolation, Systematics and Results for the NOvA Disappearance Analysis</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Constraints on the Neutrino Flux in NOvA using the Near Detector Data</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Systematic Uncertainties in the NOvA Electron Neutrino Appearance Analysis </th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Search for highly-ionizing particles in the NOvA Far Detector</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Cross-section Measurements with the NOvA ND</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Neutrino Identification with a Convolutional Neural Network in the NOvA Detectors</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+   </tbody>
+</table>
+
     
     </body>
     </html>
