--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -441,6 +441,174 @@
     </tr>
    </tbody>
 </table>
+       
+         <h2 style="text-align:left;color:white"><b><i>SUSY</b></i></h2>
+       <h4 style="color:white">LHC</h4>
+        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
+  <thead>
+    <tr>
+      <th scope="col" width="130">Experiment</th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Searches for SUSY (25' + 5')</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Search for electroweak production of SUSY at CMS (15' + 5')</th>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <th scope="row">SUSY searches with two opposite-sign same-flavor leptons at CMS</th>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Searches for R-Parity violating SUSY with the ATLAS detector (15' + 5')</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Searches for long lived SUSY particles (10' + 2')</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Prospects for SUSY DM after the LHC Run 1 (15' + 5')</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Searches for SUSY in photons and tau channels with the ATLAS detector (15' + 5')</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+   </tbody>
+</table>
+
+ <h2 style="text-align:left;color:white"><b><i>Exotic States</b></i></h2>
+    <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
+  <thead>
+    <tr>
+      <th scope="col" width="130">Experiment</th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Physics potential and prospects at SuperKEKB/Belle II (10' + 5')</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Exotic hadrons at the LHC (25' + 5')</th>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Exotic hadrons at the Tevatron (15' + 5')</th>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Exotica searches (25' + 5')</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Exploring the Masses of Exotic Heavy Pentaquarks</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Search for exotic decays of the 125 GeV Higgs boson using the CMS detector (15' + 5')</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">Production of exotic hadrons and charmonium at Belle/Babar (12' + 3')</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <th scope="row">LHCb Exotica and Higgs searches</th>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+      </tbody>
+       </table>
 
     
     </body>
