--- a/teamrosters.html
+++ b/teamrosters.html
@@ -46,25 +46,17 @@
      <h2 style="text-align:left;color:white"><b><i>Dark Matter</b></i></h2> 
        <h4 style="color:white">WIMP Experiments</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
-  <thead>
-    <tr>
-      <th scope="col" width="130">PICO</th>
-      <th scope="col">SuperCDMS</th>
-      <th scope="col">CRESST</th>
-      <th scope="col">SIMPLE</th>
-      <th scope="col">Pacific NW National Lab - WIMP Search</th>
-      <th scope="col">LX</th>
-    </tr>
-  </thead>
   <tbody>
     <tr>
-      <th scope="row">PICO</th>
-      <td>DAMPE</td>
-      <td></td>
-      <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
+      <th scope="row"><i>PICO</i></th>
+      <td><i>SuperCDMS</i></td>
+      <td><i>CRESST</i></td>
+      <td><i>SIMPLE</i></td>
+      <td><i>Pacific NW National Lab - WIMP Search</i></td>
+      <td><i>LX</i></td>
+      <td><i>DAMPE</i></td>
+      <td><i>XMASS</i></td>
+      <td><i>DarkSide-20k</i><td>
     </tr>
          </tbody>
      </table>
