--- a/teamrosters.html
+++ b/teamrosters.html
@@ -51,10 +51,14 @@
       <th scope="row"><i>PICO</i></th>
       <td><i>SuperCDMS</i></td>
       <td><i>CRESST</i></td>
-      <td><i>SIMPLE</i></td>
+    </tr>
+    <tr>
+      <th scope="row"><i>SIMPLE</i></th>
       <td><i>Pacific NW National Lab - WIMP Search</i></td>
       <td><i>LX</i></td>
-      <td><i>DAMPE</i></td>
+    </tr>
+    <tr>
+      <th scope="row"><i>DAMPE</i></td>
       <td><i>XMASS</i></td>
       <td><i>DarkSide-20k</i><td>
     </tr>
