--- a/teamrosters.html
+++ b/teamrosters.html
@@ -48,17 +48,17 @@
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
   <tbody>
     <tr>
-      <th scope="row"><i>PICO</i></th>
+      <th scope="row" width="100"><i>PICO</i></th>
       <td><i>SuperCDMS</i></td>
       <td><i>CRESST</i></td>
     </tr>
     <tr>
-      <th scope="row"><i>SIMPLE</i></th>
+      <th scope="row" width="100"><i>SIMPLE</i></th>
       <td><i>Pacific NW National Lab - WIMP Search</i></td>
       <td><i>LX</i></td>
     </tr>
     <tr>
-      <th scope="row"><i>DAMPE</i></td>
+      <th scope="row" width="100"><i>DAMPE</i></td>
       <td><i>XMASS</i></td>
       <td><i>DarkSide-20k</i><td>
     </tr>
