--- a/teamrosters.html
+++ b/teamrosters.html
@@ -49,18 +49,18 @@
   <tbody>
     <tr>
       <th scope="row" width="100"><i>PICO</i></th>
-      <td><i>SuperCDMS</i></td>
-      <td><i>CRESST</i></td>
+      <td width="100"><i>SuperCDMS</i></td>
+      <td width="100"><i>CRESST</i></td>
     </tr>
     <tr>
       <th scope="row" width="100"><i>SIMPLE</i></th>
-      <td><i>Pacific NW National Lab - WIMP Search</i></td>
-      <td><i>LX</i></td>
+      <td width="100"><i>Pacific NW National Lab - WIMP Search</i></td>
+      <td width="100"><i>LX</i></td>
     </tr>
     <tr>
       <th scope="row" width="100"><i>DAMPE</i></td>
-      <td><i>XMASS</i></td>
-      <td><i>DarkSide-20k</i><td>
+      <td width="100"><i>XMASS</i></td>
+      <td width="100"><i>DarkSide-20k</i><td>
     </tr>
          </tbody>
      </table>
