--- a/teamrosters.html
+++ b/teamrosters.html
@@ -43,24 +43,24 @@
 </nav>
     </nav>
      
-     <h2 style="text-align:left;color:white"><b><i>Dark Matter</b></i></h2> 
-       <h4 style="color:white">WIMP Experiments</h4>
+     <h2 style="text-align:left;color:white"><b><i>Dark Matter</b></i></h2><br>
+       <h4 style="color:white">WIMP Experiments</h4><br>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
   <tbody>
     <tr>
-      <th scope="row" width="130"><i>PICO</i></th>
-      <td width="130"><i>SuperCDMS</i></td>
-      <td width="130"><i>CRESST</i></td>
+      <th scope="row"><i>PICO</i></th>
+      <td><i>SuperCDMS</i></td>
+      <td><i>CRESST</i></td>
     </tr>
     <tr>
-      <th scope="row" width="130"><i>SIMPLE</i></th>
-      <td width="130"><i>Pacific NW National Lab - WIMP Search</i></td>
-      <td width="130"><i>LX</i></td>
+      <th scope="row"><i>SIMPLE</i></th>
+      <td><i>Pacific NW National Lab - WIMP Search</i></td>
+      <td><i>LX</i></td>
     </tr>
     <tr>
-      <th scope="row" width="130"><i>DAMPE</i></td>
-      <td width="130"><i>XMASS</i></td>
-      <td width="130"><i>DarkSide-20k</i><td>
+      <th scope="row"><i>DAMPE</i></td>
+      <td><i>XMASS</i></td>
+      <td><i>DarkSide-20k</i><td>
     </tr>
          </tbody>
      </table>
