--- a/teamrosters.html
+++ b/teamrosters.html
@@ -44,11 +44,11 @@
     </nav>
      
      <h2 style="text-align:left;color:white"><b><i>Dark Matter</b></i></h2><br>
-       <h4 style="color:white">WIMP Experiments</h4><br>
+       <h4 style="color:white">WIMP Experiments</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
   <tbody>
     <tr>
-      <th scope="row"><i>PICO</i></th>
+      <td<i>PICO</i></th>
       <td><i>SuperCDMS</i></td>
       <td><i>CRESST</i></td>
     </tr>
