--- a/teamrosters.html
+++ b/teamrosters.html
@@ -48,7 +48,7 @@
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
   <tbody>
     <tr>
-      <td<i>PICO</i></th>
+      <td><i>PICO</i></td>
       <td><i>SuperCDMS</i></td>
       <td><i>CRESST</i></td>
     </tr>
