--- a/teamrosters.html
+++ b/teamrosters.html
@@ -53,12 +53,12 @@
       <td><i>CRESST</i></td>
     </tr>
     <tr>
-      <th scope="row"><i>SIMPLE</i></th>
+      <td><i>SIMPLE</i></td>
       <td><i>Pacific NW National Lab - WIMP Search</i></td>
       <td><i>LX</i></td>
     </tr>
     <tr>
-      <th scope="row"><i>DAMPE</i></td>
+      <td><i>DAMPE</i></td>
       <td><i>XMASS</i></td>
       <td><i>DarkSide-20k</i><td>
     </tr>
