--- a/rules.html
+++ b/rules.html
@@ -69,8 +69,8 @@
        <li style="margin-left:50px;color:white;font-size:22px">A User wins an Event by earning the most amount of EP</li>
        <li style="margin-left:50px;color:white;font-size:22px">The Winners of the Events within a Tournament compare their total GP earned </li>
        <li style="margin-left:75px;color:white;font-size:18px">Whoever holds the most GP is the Tournament Champion</li>
-        </ul>
-     <h1 style="color:white">Tournament Rules<br><br></h1>
+        <br></ul>
+     <h1 style="color:white">Tournament Rules<br></h1>
         <h3 style="margin-left:25px;font-size:30px;color:white">What is a Tournament?</h3>
      <ul>
        <li style="margin-left:50px;color:white;font-size:22px">A Tournament is the highest tier, with regards to winning, of the game</li>
