--- a/rules.html
+++ b/rules.html
@@ -43,7 +43,7 @@
 </nav>
     </nav>
      
-     <h1 style="color:white">Rules & Definitions<br><br></h1>
+     <h1 style="margin-left:5px;color:white">Rules & Definitions<br><br></h1>
    	<h3 style="margin-left:25px;color:white;font-size:30px;color:white">Definitions</h3>
      <ul>
        <li style="margin-left:50px;color:white;font-size:22px"><b><i>User - </b></i>Humans who physically play the game</li>
@@ -70,7 +70,7 @@
        <li style="margin-left:50px;color:white;font-size:22px">The Winners of the Events within a Tournament compare their total GP earned </li>
        <li style="margin-left:75px;color:white;font-size:18px">Whoever holds the most GP is the Tournament Champion</li>
         <br></ul>
-     <h1 style="color:white">Tournament Rules<br></h1>
+     <h1 style="margin-left:5px;color:white">Tournament Rules<br></h1>
         <h3 style="margin-left:25px;font-size:30px;color:white">What is a Tournament?</h3>
      <ul>
        <li style="margin-left:50px;color:white;font-size:22px">A Tournament is the highest tier, with regards to winning, of the game</li>
