--- a/teamrosters.html
+++ b/teamrosters.html
@@ -59,7 +59,7 @@
     <tr>
       <td><i>DAMPE</i></td>
       <td><i>XMASS</i></td>
-      <td><i>DarkSide-20k</i><td>
+      <td><i>DarkSide-20k</i></td>
     </tr>
      </table>
     
