--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -53,7 +53,7 @@
       <th scope="col"></th>
     </tr>
     <tr>
-      <th scope="row">PICO</th>
+      <td><i>PICO</i></td>
       <td></td>
       <td></td>
       <td></td>
