--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -48,8 +48,10 @@
       <th scope="col" width="130">Experiment</th>
       <th scope="col"></th>
       <th scope="col"></th>
-   
-         </tr>
+       <th scope="col"></th>
+       <th scope="col"></th>
+       <th scope="col"></th>
+     </tr>
     <tr>
       <td><i>PICO</i></td>
       <td></td>
@@ -60,7 +62,7 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">SuperCDMS</th>
+      <td><i>SuperCDMS</i></td>
       <td></td>
          <td></td>
          <td></td>
@@ -69,7 +71,7 @@
       <td></td>
     </tr>
     <tr>
-      <th scope="row">CRESST</th>
+      <td><i>CRESST</i></td>
       <td></td>
       <td></td>
          <td></td>
@@ -78,7 +80,7 @@
       <td></td>
     </tr>
     <tr>
-      <th scope="row">SIMPLE</th>
+      <td><i>SIMPLE</i></td>
       <td></td>
       <td></td>
       <td></td>
@@ -87,7 +89,7 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Pacific NW National Lab - WIMP Search</th>
+      <td><i>Pacific NW National Lab - WIMP Search</i></td>
       <td></td>
       <td></td>
       <td></td>
@@ -96,7 +98,7 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">LX</th>
+      <td><i>LX</i></td>
       <td></td>
       <td></td>
       <td></td>
@@ -105,7 +107,7 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">DAMPE</th>
+      <td><i>DAMPE</i></td>
       <td></td>
       <td></td>
       <td></td>
@@ -114,7 +116,7 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">XMASS</th>
+      <td><i>XMASS</i></td>
       <td></td>
       <td></td>
       <td></td>
@@ -123,7 +125,7 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">DarkSide-20k</th>
+      <td><i>DarkSide-20k</i></td>
       <td></td>
       <td></td>
       <td></td>
@@ -132,7 +134,7 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">CERN SPS/NA64</th>
+      <td><i>CERN SPS/NA64</i></td>
       <td></td>
       <td></td>
       <td></td>
@@ -141,7 +143,7 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">SLAC/HPS</th>
+      <td><i>SLAC/HPS</i></td>
       <td></td>
       <td></td>
       <td></td>
@@ -150,7 +152,7 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">DAMA</th>
+      <td><i>DAMA</i></td>
       <td></td>
       <td></td>
       <td></td>
