--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -45,7 +45,7 @@
        <h4 style="color:white">WIMP & Dark/Hidden Sectors</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <th scope="col" width="130">Experiment</th>
+      <th scope="col">Experiment</th>
       <th scope="col"></th>
       <th scope="col"></th>
        <th scope="col"></th>
@@ -54,13 +54,7 @@
      </tr>
     <tr>
       <td><i>PICO</i></td>
-      <td></td>
-      <td></td>
-      <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-    </tr>
+        </tr>
     <tr>
       <td><i>SuperCDMS</i></td>
       <td></td>
