--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -45,7 +45,7 @@
        <h4 style="color:white">WIMP & Dark/Hidden Sectors</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <th scope="col">Experiment</th>
+      <th scope="col" width="130">Experiment</th>
       <th scope="col"></th>
       <th scope="col"></th>
        <th scope="col"></th>
@@ -163,26 +163,15 @@
       <th scope="col"></th>
     </tr>
     <tr>
-      <th scope="row">Associated Higgs Boson Top-Quark Production ttH→2ℓ+1τhadat s√=13~TeV with ATLAS</th>
+      <td><i>Associated Higgs Boson Top-Quark Production ttH→2ℓ+1τhadat s√=13~TeV with ATLAS</i></td>
       <td></td>
       <td></td>
       <td></td>
          <td></td>
          <td></td>
-         <td></td>
-    </tr>
+        </tr>
     <tr>
-      <th scope="row">Single top quark production measurements in CMS (15' + 5')</th>
-      <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">Search for Vector-Like Top Quarks in the CMS detector</th>
-      <td></td>
+      <td><i>Single top quark production measurements in CMS (15' + 5')</i></td>
       <td></td>
          <td></td>
          <td></td>
@@ -190,17 +179,7 @@
       <td></td>
     </tr>
     <tr>
-      <th scope="row">Inclusive top-quark pair production cross section in pp collisions at \sqrt{s} = 13 TeV in CMS in the dileptonic final state</th>
-      <td></td>
-      <td></td>
-      <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-    </tr>
-    <tr>
-      <th scope="row">Production of heavy Higgs bosons and decay into top quarks at the LHC (15' + 5')</th>
-      <td></td>
+      <td><i>Search for Vector-Like Top Quarks in the CMS detector</i></td>
       <td></td>
       <td></td>
          <td></td>
@@ -208,47 +187,58 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Search for Standard Model Production of Four Top Quarks</th>
+      <td><i>Inclusive top-quark pair production cross section in pp collisions at \sqrt{s} = 13 TeV in CMS in the dileptonic final state</i></td>
       <td></td>
       <td></td>
       <td></td>
          <td></td>
+         <td></td>
+           </tr>
+    <tr>
+      <td><i>Production of heavy Higgs bosons and decay into top quarks at the LHC (15' + 5')</i></td>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+      </tr>
+    <tr>
+      <td><i>Search for Standard Model Production of Four Top Quarks</i></td>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+     </tr>
+    <tr>
+      <td><i>Measurement of top quark properties in single top production (15' + 5')</i></td>
+      <td></td>
+      <td></td>
+      <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Measurement of top quark properties in single top production (15' + 5')</th>
+      <td><i>Search for scalar top quark production in all hadronic channel</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Search for scalar top quark production in all hadronic channel</th>
+      <td><i>Top quark mass calibration for Monte-Carlo event generators (15' + 5')</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Top quark mass calibration for Monte-Carlo event generators (15' + 5')</th>
+      <td><i>First attempt to search for H+ to cbbar in top quark decays at CMS</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-    </tr>
-    <tr>
-      <th scope="row">First attempt to search for H+ to cbbar in top quark decays at CMS</th>
-      <td></td>
-      <td></td>
-      <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
@@ -266,26 +256,15 @@
       <th scope="col"></th>
     </tr>
     <tr>
-      <th scope="row">Novel real-time calibration and alignment at LHCb for RunII (20' + 5')</th>
+      <td><i>Novel real-time calibration and alignment at LHCb for RunII (20' + 5')</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">b-hadron production at LHCb (15' + 5')</th>
-      <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">Rare leptonic and semileptonic b-hadron decays and Tests of Lepton Flavour Universality at LHCb (10' + 5')</th>
-      <td></td>
+      <td><i>b-hadron production at LHCb (15' + 5')</i></td>
       <td></td>
          <td></td>
          <td></td>
@@ -293,8 +272,7 @@
       <td></td>
     </tr>
     <tr>
-      <th scope="row">Electroweak scale exotica with LHCb (15' + 5')</th>
-      <td></td>
+      <td><i>Rare leptonic and semileptonic b-hadron decays and Tests of Lepton Flavour Universality at LHCb (10' + 5')</i></td>
       <td></td>
       <td></td>
          <td></td>
@@ -302,11 +280,18 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Search for a Standard Model Higgs boson produced in association w a W or Z boson decaying to bottom quarks</th>
+      <td><i>Electroweak scale exotica with LHCb (15' + 5')</i></td>
       <td></td>
       <td></td>
       <td></td>
          <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <td><i>Search for a Standard Model Higgs boson produced in association w a W or Z boson decaying to bottom quarks</i></td>
+      <td></td>
+      <td></td>
+      <td></td>
          <td></td>
          <td></td>
     </tr>
@@ -323,26 +308,15 @@
       <th scope="col"></th>
     </tr>
     <tr>
-      <th scope="row">Recent Results of Electron-Neutrino Appearance Measurement at NOvA (13' + 2')</th>
+      <td><i>Recent Results of Electron-Neutrino Appearance Measurement at NOvA (13' + 2')</i></td>
       <td></td>
       <td></td>
       <td></td>
          <td></td>
          <td></td>
-         <td></td>
-    </tr>
+       </tr>
     <tr>
-      <th scope="row">Neutrino Induced Neutral Current Coherent π^0 Production in The NOvA Near Detector</th>
-      <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">Looking amongst the neutrinos for lightweight dark matter in the NOva Near Dectector </th>
-      <td></td>
+      <td><i>Neutrino Induced Neutral Current Coherent π^0 Production in The NOvA Near Detector</i></td>
       <td></td>
          <td></td>
          <td></td>
@@ -350,17 +324,7 @@
       <td></td>
     </tr>
     <tr>
-      <th scope="row">Measurement of c-jet tagging efficiency in ATLAS with W+c-jet events</th>
-      <td></td>
-      <td></td>
-      <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-    </tr>
-    <tr>
-      <th scope="row">Extrapolation, Systematics and Results for the NOvA Disappearance Analysis</th>
-      <td></td>
+      <td><i>Looking amongst the neutrinos for lightweight dark matter in the NOva Near Dectector</i></td>
       <td></td>
       <td></td>
          <td></td>
@@ -368,47 +332,58 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Constraints on the Neutrino Flux in NOvA using the Near Detector Data</th>
+      <td><i>Measurement of c-jet tagging efficiency in ATLAS with W+c-jet events</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Systematic Uncertainties in the NOvA Electron Neutrino Appearance Analysis </th>
+      <td><i>Extrapolation, Systematics and Results for the NOvA Disappearance Analysis</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Search for highly-ionizing particles in the NOvA Far Detector</th>
+      <td><i>Constraints on the Neutrino Flux in NOvA using the Near Detector Data</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Cross-section Measurements with the NOvA ND</th>
+      <td><i>Systematic Uncertainties in the NOvA Electron Neutrino Appearance Analysis</i></td>
       <td></td>
       <td></td>
       <td></td>
          <td></td>
+         <td></td>
+     </tr>
+    <tr>
+      <td><i>Search for highly-ionizing particles in the NOvA Far Detector</i></td>
+      <td></td>
+      <td></td>
+      <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Neutrino Identification with a Convolutional Neural Network in the NOvA Detectors</th>
+      <td><i>Cross-section Measurements with the NOvA ND</i></td>
       <td></td>
       <td></td>
       <td></td>
          <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <td><i>Neutrino Identification with a Convolutional Neural Network in the NOvA Detectors</i></td>
+      <td></td>
+      <td></td>
+      <td></td>
          <td></td>
          <td></td>
     </tr>
@@ -426,26 +401,15 @@
       <th scope="col"></th>
     </tr>
     <tr>
-      <th scope="row">Searches for SUSY (25' + 5')</th>
+      <td><i>Searches for SUSY (25' + 5')</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Search for electroweak production of SUSY at CMS (15' + 5')</th>
-      <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">SUSY searches with two opposite-sign same-flavor leptons at CMS</th>
-      <td></td>
+      <td><i>Search for electroweak production of SUSY at CMS (15' + 5')</i></td>
       <td></td>
          <td></td>
          <td></td>
@@ -453,17 +417,7 @@
       <td></td>
     </tr>
     <tr>
-      <th scope="row">Searches for R-Parity violating SUSY with the ATLAS detector (15' + 5')</th>
-      <td></td>
-      <td></td>
-      <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-    </tr>
-    <tr>
-      <th scope="row">Searches for long lived SUSY particles (10' + 2')</th>
-      <td></td>
+      <td><i>SUSY searches with two opposite-sign same-flavor leptons at CMS</i></td>
       <td></td>
       <td></td>
          <td></td>
@@ -471,20 +425,34 @@
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Prospects for SUSY DM after the LHC Run 1 (15' + 5')</th>
+      <td><i>Searches for R-Parity violating SUSY with the ATLAS detector (15' + 5')</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Searches for SUSY in photons and tau channels with the ATLAS detector (15' + 5')</th>
+      <td><i>Searches for long lived SUSY particles (10' + 2')</i></td>
       <td></td>
       <td></td>
       <td></td>
          <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <td><i>Prospects for SUSY DM after the LHC Run 1 (15' + 5')</i></td>
+      <td></td>
+      <td></td>
+      <td></td>
+         <td></td>
+         <td></td>
+    </tr>
+    <tr>
+      <td><i>Searches for SUSY in photons and tau channels with the ATLAS detector (15' + 5')</i></td>
+      <td></td>
+      <td></td>
+      <td></td>
          <td></td>
          <td></td>
     </tr>
@@ -503,26 +471,15 @@
     </tr>
   </thead>
     <tr>
-      <th scope="row">Physics potential and prospects at SuperKEKB/Belle II (10' + 5')</th>
+      <td><i>Physics potential and prospects at SuperKEKB/Belle II (10' + 5')</i></td>
       <td></td>
       <td></td>
       <td></td>
          <td></td>
          <td></td>
-         <td></td>
-    </tr>
+      </tr>
     <tr>
-      <th scope="row">Exotic hadrons at the LHC (25' + 5')</th>
-      <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">Exotic hadrons at the Tevatron (15' + 5')</th>
-      <td></td>
+      <td><i>Exotic hadrons at the LHC (25' + 5')</i></td>
       <td></td>
          <td></td>
          <td></td>
@@ -530,47 +487,50 @@
       <td></td>
     </tr>
     <tr>
-      <th scope="row">Exotica searches (25' + 5')</th>
-      <td></td>
+      <td><i>Exotic hadrons at the Tevatron (15' + 5')</i></td>
       <td></td>
       <td></td>
          <td></td>
+         <td></td>
+         <td></td>
+     </tr>
+    <tr>
+      <td><i>Exotica searches (25' + 5')</i></td>
+      <td></td>
+      <td></td>
+      <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Exploring the Masses of Exotic Heavy Pentaquarks</th>
+      <td><i>Exploring the Masses of Exotic Heavy Pentaquarks</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Search for exotic decays of the 125 GeV Higgs boson using the CMS detector (15' + 5')</th>
+      <td><i>Search for exotic decays of the 125 GeV Higgs boson using the CMS detector (15' + 5')</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
     <tr>
-      <th scope="row">Production of exotic hadrons and charmonium at Belle/Babar (12' + 3')</th>
+      <td><i>Production of exotic hadrons and charmonium at Belle/Babar (12' + 3')</i></td>
       <td></td>
       <td></td>
       <td></td>
          <td></td>
          <td></td>
-         <td></td>
-    </tr>
+     </tr>
     <tr>
-      <th scope="row">LHCb Exotica and Higgs searches</th>
+      <td><i>LHCb Exotica and Higgs searches</i></td>
       <td></td>
       <td></td>
       <td></td>
-         <td></td>
          <td></td>
          <td></td>
     </tr>
