--- a/teamrosters.html
+++ b/teamrosters.html
@@ -99,6 +99,7 @@
   <td><i>Electroweak scale exotica with LHCb (15' + 5')</i></td>
       <td><i>Search for a Standard Model Higgs boson produced in association w a W or Z boson decaying to bottom quarks</i></td>
          </tr>
+     </table>
     <h4 style="color:white">NOvA Experiments</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
