--- a/teamrosters.html
+++ b/teamrosters.html
@@ -47,7 +47,7 @@
        <h4 style="color:white">WIMP Experiments</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <td><i><a href="http://www.picoexperiment.com/dm_problem.php" style="color:white">PICO</i></td>
+      <td><i><u><a href="http://www.picoexperiment.com/dm_problem.php" style="color:white">PICO</u></i></td>
       <td><i>SuperCDMS</i></td>
       <td><i>CRESST</i></td>
     </tr>
