--- a/teamrosters.html
+++ b/teamrosters.html
@@ -48,26 +48,26 @@
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
       <td><i><u><a href="http://www.picoexperiment.com/dm_problem.php" style="color:white">PICO</u></i></td>
-      <td><i>SuperCDMS</i></td>
-      <td><i>CRESST</i></td>
+      <td><i><u><a href="http://cdms.berkeley.edu/">SuperCDMS</u></i></td>
+      <td><i><u><a href="https://www.cresst.de/exp_overview.php">CRESST</u></i></td>
     </tr>
     <tr>
-      <td><i>SIMPLE</i></td>
-      <td><i>Pacific NW National Lab - WIMP Search</i></td>
-      <td><i>LX</i></td>
+      <td><i><u><a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.89.072013">SIMPLE</u></i></td>
+      <td><i><u><a href="https://www.pnnl.gov/about/ashby_accounts/tch_052018.asp">Pacific NW National Lab - WIMP Search</u></i></td>
+      <td><i><u><a href="http://lz.lbl.gov/">LX</u></i></td>
     </tr>
     <tr>
-      <td><i>DAMPE</i></td>
-      <td><i>XMASS</i></td>
-      <td><i>DarkSide-20k</i></td>
+      <td><i><u><a href="http://dpnc.unige.ch/dampe/">DAMPE</u></i></td>
+      <td><i><u><a href="http://www-sk.icrr.u-tokyo.ac.jp/xmass/about/message/index-e.html">XMASS</u></i></td>
+      <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.9">DarkSide-20k</u></i></td>
     </tr>
      </table>
      <h4 style="color:white">Dark/Hidden Sectors Experiments</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <td><i>CERN SPS/NA64</i></td>
-      <td><i>SLAC/HPS</i></td>
-      <td><i>DAMA</i></td>
+      <td><i><u><a href="https://na64.web.cern.ch/">CERN SPS/NA64</u></i></td>
+      <td><i><u><a href="https://confluence.slac.stanford.edu/display/hpsg/Heavy+Photon+Search+Experiment">SLAC/HPS</u></i></td>
+      <td><i><u><a href="http://people.roma2.infn.it/~dama/web/home.html">DAMA</u></i></td>
     </tr>
     </table>
      <br>
