--- a/teamrosters.html
+++ b/teamrosters.html
@@ -48,18 +48,18 @@
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
       <td><i><u><a href="http://www.picoexperiment.com/dm_problem.php" style="color:white">PICO</u></i></td>
-      <td><i><u><a href="http://cdms.berkeley.edu/">SuperCDMS</u></i></td>
-      <td><i><u><a href="https://www.cresst.de/exp_overview.php">CRESST</u></i></td>
+      <td><i><u><a href="http://cdms.berkeley.edu/" style="color:white">SuperCDMS</u></i></td>
+      <td><i><u><a href="https://www.cresst.de/exp_overview.php" style="color:white">CRESST</u></i></td>
     </tr>
     <tr>
-      <td><i><u><a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.89.072013">SIMPLE</u></i></td>
-      <td><i><u><a href="https://www.pnnl.gov/about/ashby_accounts/tch_052018.asp">Pacific NW National Lab - WIMP Search</u></i></td>
-      <td><i><u><a href="http://lz.lbl.gov/">LX</u></i></td>
+      <td><i><u><a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.89.072013" style="color:white">SIMPLE</u></i></td>
+      <td><i><u><a href="https://www.pnnl.gov/about/ashby_accounts/tch_052018.asp" style="color:white">Pacific NW National Lab - WIMP Search</u></i></td>
+      <td><i><u><a href="http://lz.lbl.gov/" style="color:white">LX</u></i></td>
     </tr>
     <tr>
-      <td><i><u><a href="http://dpnc.unige.ch/dampe/">DAMPE</u></i></td>
-      <td><i><u><a href="http://www-sk.icrr.u-tokyo.ac.jp/xmass/about/message/index-e.html">XMASS</u></i></td>
-      <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.9">DarkSide-20k</u></i></td>
+      <td><i><u><a href="http://dpnc.unige.ch/dampe/" style="color:white">DAMPE</u></i></td>
+      <td><i><u><a href="http://www-sk.icrr.u-tokyo.ac.jp/xmass/about/message/index-e.html" style="color:white">XMASS</u></i></td>
+      <td><i><u><a href="http://meetings.aps.org/Meeting/APR18/Session/R17.9" style="color:white">DarkSide-20k</u></i></td>
     </tr>
      </table>
      <h4 style="color:white">Dark/Hidden Sectors Experiments</h4>
