--- a/teamrosters.html
+++ b/teamrosters.html
@@ -63,11 +63,11 @@
     </tr>
      </table>
      <h4 style="color:white">Dark/Hidden Sectors Experiments</h4>
-       <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
+       <table class="table table-bordered"style="background-color:rgb(119, 128, 175) width="100%">
     <tr>
-      <td width="375"><i><u><a href="https://na64.web.cern.ch/" style="color:white">CERN SPS/NA64</u></i></td>
-      <td><i><u><a href="https://confluence.slac.stanford.edu/display/hpsg/Heavy+Photon+Search+Experiment" style="color:white">SLAC/HPS</u></i></td>
-      <td><i><u><a href="http://people.roma2.infn.it/~dama/web/home.html" style="color:white">DAMA</u></i></td>
+      <td width="(100/3)%"><i><u><a href="https://na64.web.cern.ch/" style="color:white">CERN SPS/NA64</u></i></td>
+      <td width="(100/3)%"><i><u><a href="https://confluence.slac.stanford.edu/display/hpsg/Heavy+Photon+Search+Experiment" style="color:white">SLAC/HPS</u></i></td>
+      <td width="(100/3)%"><i><u><a href="http://people.roma2.infn.it/~dama/web/home.html" style="color:white">DAMA</u></i></td>
     </tr>
     </table>
      <br>
